crates/solidity-v2/testing/snapshots/cst_output/UsingDirective/path_unnamed/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: This syntax was introduced in version '0.8.13'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/UsingDirective/path_unnamed/input.sol:2:1]
   │
 2 │ using foo for *;
   │ ────────┬───────  
   │         ╰───────── Error occurred here.
───╯


SourceUnitStruct {
    members: SourceUnitMembers {
        elements: [
            UsingDirective(
                UsingDirectiveStruct {
                    using_keyword: UsingKeyword {
                        range: 102..107,
                    },
                    clause: IdentifierPath(
                        IdentifierPath {
                            elements: [
                                Identifier(
                                    Identifier {
                                        range: 108..111,
                                    },
                                ),
                            ],
                        },
                    ),
                    for_keyword: ForKeyword {
                        range: 112..115,
                    },
                    target: Asterisk(
                        Asterisk {
                            range: 116..117,
                        },
                    ),
                    global_keyword: None,
                    semicolon: Semicolon {
                        range: 117..118,
                    },
                },
            ),
        ],
    },
}
